Correcting list view width to 410px to fix gap issue in iframe version.

--- a/src/boot/stylesheets/main.scss
+++ b/src/boot/stylesheets/main.scss
@@ -333,7 +333,7 @@ body {
     	right: 0;
     	left: auto;
       bottom: 0;
-      width: 400px;
+      width: 410px;
       overflow: hidden;
 			&:not(.is-note-open) {
 				box-shadow: -3px 1px 10px -2px rgba($gray-dark, 0.075);
